media queries and hard coded projects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src="js/script.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="fonts/pe-icon-social/css/pe-icon-social.css">
   <meta name="description" content="Rob Hern's Portfolio. Junior Front-End Web Developer in London, England">
@@ -53,20 +53,41 @@
 	</header>
 	<div id="project-container">
 	  <div class="project-box">
-		<!--<img src="img/jack1_small.jpg"
-		onmouseover="this.src='img/jack2_small.jpg'"
-        onmouseout="this.src='img/jack1_small.jpg'" 
-		alt ="Jack Mudge - 3D Artist Portfolio Site"/>
+		  <img src="img/jack1_small.jpg"
+		  onmouseover="this.src='img/jack2_small.jpg'"
+      onmouseout="this.src='img/jack1_small.jpg'" 
+		  alt ="Jack Mudge - 3D Artist Portfolio Site"/>
 		<h3>3D Artist Site</h3>
 		<h4 class="handwritten">Jack Mudge</h4>
-		<p><a href="">View</a></p>
+		<p><a href="">Learn More</a>  |  <a href="">View</a></p>
 	  </div>
 	  <div class="project-box">
-		B
-	  </div>
+      <img src="img/resume1_small.png"
+      onmouseover="this.src='img/resume2_small.png'"
+      onmouseout="this.src='img/resume1_small.png'" 
+      alt ="Jack Mudge - 3D Artist Portfolio Site"/>
+    <h3>Responsive Resume</h3>
+    <h4 class="handwritten">Udacity Nanodegree</h4>
+    <p><a href="">Learn More</a>  |  <a href="">View</a></p>
+    </div>
 	  <div class="project-box">
-		C
-	  </div>-->
+      <img src="http://placekitten.com/500/250"
+      onmouseover="this.src='http://placekitten.com/1000/500'"
+      onmouseout="this.src='http://placekitten.com/500/250'" 
+      alt ="Alt Text"/>
+    <h3>Project Name</h3>
+    <h4 class="handwritten">Made For/At</h4>
+    <p><a href="">Learn More</a>  |  <a href="">View</a></p>
+    </div><!--END OF PROJECT BOX-->
+    <div class="project-box">
+      <img src="http://placekitten.com/600/350"
+      onmouseover="this.src='http://placekitten.com/1100/650'"
+      onmouseout="this.src='http://placekitten.com/600/350'" 
+      alt ="Alt Text"/>
+    <h3>Project Name</h3>
+    <h4 class="handwritten">Made For/At</h4>
+    <p><a href="">Learn More</a>  |  <a href="">View</a></p>
+    </div><!--END OF PROJECT BOX-->
 	</div>
 </div>
 
