--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
   
   <header>
     <div class="icon-container">
-      <img id="icon" src="img/icon.png" alt="Rob Hern">
+      <img id="icon" src="img/icon.png" 
+      onmouseover="this.src='img/icon2.png'"
+      onmouseout="this.src='img/icon.png'" 
+      alt="Rob Hern">
       </div>
 	  <div class="headings-container">
 		<h1 class="hundred"><a href="index.html">Rob Hern</a></h1>
