change to show jeff

--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
     <h4 class="handwritten">Made For/At</h4>
     <p><a href="">Learn More</a>  |  <a href="">View</a></p>
     </div><!--END OF PROJECT BOX-->
+    <div class="project-box">
+      <img src="http://placekitten.com/600/350"
+      onmouseover="this.src='http://placekitten.com/1100/650'"
+      onmouseout="this.src='http://placekitten.com/600/350'" 
+      alt ="Alt Text"/>
+    <h3>Project Name</h3>
+    <h4 class="handwritten">Made For/At</h4>
+    <p><a href="">Learn More</a>  |  <a href="">View</a></p>
+    </div><!--END OF PROJECT BOX-->
 	</div>
 </div>
 
