adding hamburger and responsive portfolio pieces

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="js/script.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="fonts/pe-icon-social/css/pe-icon-social.css">
+  <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
   <meta name="description" content="Rob Hern's Portfolio. Junior Front-End Web Developer in London, England">
   <meta property="og:title" content="Rob Hern. Junior Front-End Web Developer. London, England.">
   <meta property="og:image" content="share.png">
@@ -18,9 +19,7 @@
 <body>
 <!-- Use any element to open the sidenav -->
 <span onclick="openNav()">
-<div id="navopener">
-	<p>Navigation</p>
-</div>
+	<p id="nav-opener">&#9776;</p>
 </span>
 
 	<div id="mySidenav" class="sidenav">
@@ -44,8 +43,8 @@
       alt="Rob Hern">
       </div>
 	  <div class="headings-container">
-		<h1 class="hundred"><a href="index.html">Rob Hern</a></h1>
-		<h2 class="written hundred">Jnr Front-End Web Developer</h2>
+		<h1 class="hundred" id="nameid"><a href="index.html">Rob Hern</a></h1>
+		<h2 class="written hundred" id="jobtitle"></h2>
 		<ul class="social-buttons hundred">
           <a href= "http://instagram.com/robhern"><li class="pe-so-instagram social-buttons"></li></a>
           <a href="http://twitter.com/robhern"><li class="pe-so-twitter social-buttons"></li></a>
@@ -55,7 +54,7 @@
 		</div>
 	</header>
 	<div id="project-container">
-	  <div class="project-box">
+	  <!--<div class="project-box">
 		  <img src="img/jack1_small.jpg"
 		  onmouseover="this.src='img/jack2_small.jpg'"
       onmouseout="this.src='img/jack1_small.jpg'" 
@@ -81,7 +80,7 @@
     <h3>Project Name</h3>
     <h4 class="handwritten">Made For/At</h4>
     <p><a href="">Learn More</a>  |  <a href="">View</a></p>
-    </div><!--END OF PROJECT BOX-->
+    </div>
     <div class="project-box">
       <img src="http://placekitten.com/600/350"
       onmouseover="this.src='http://placekitten.com/1100/650'"
@@ -90,7 +89,7 @@
     <h3>Project Name</h3>
     <h4 class="handwritten">Made For/At</h4>
     <p><a href="">Learn More</a>  |  <a href="">View</a></p>
-    </div><!--END OF PROJECT BOX-->
+    </div>
     <div class="project-box">
       <img src="http://placekitten.com/600/350"
       onmouseover="this.src='http://placekitten.com/1100/650'"
@@ -99,7 +98,7 @@
     <h3>Project Name</h3>
     <h4 class="handwritten">Made For/At</h4>
     <p><a href="">Learn More</a>  |  <a href="">View</a></p>
-    </div><!--END OF PROJECT BOX-->
+    </div>-->
 	</div>
 </div>
 
