begin jacks site portfolio page

--- a/jackmudge.html
+++ b/jackmudge.html
@@ -66,17 +66,27 @@
         </ul>
 		</div>
 	</header>
-	<div id="project-container">
-	  <!--<div class="project-box">
-		  <img src="img/jack1_small.jpg"
-		  onmouseover="this.src='img/jack2_small.jpg'"
-      onmouseout="this.src='img/jack1_small.jpg'" 
-		  alt ="Jack Mudge - 3D Artist Portfolio Site"/>
-		<h3>3D Artist Site</h3>
-		<h4 class="handwritten">Jack Mudge</h4>
-		<p><a href="">Learn More</a>  |  <a href="">View</a></p>
-	  </div>-->
-	</div>
+	
+  <div id="portfolio-piece-container">
+    <div class=portfolio-image-container>
+      <img src="img/portfolio/jack.gif"/>
+    </div>
+    <div class="description-container">
+      <h1>Artist Portfolio Site</h1><h2 class="handwritten">Jack Mudge - 3D Artist</h2>
+      <h3 class="handwritten">Created using: </h3><p id="created-using"></p>
+      <ul class="icons-container">
+      <li class="feature"><img id="featureimg" src="img/features/html5.png" alt="HTML5"></li>
+      <li class="feature"><img id="featureimg" src="img/features/css3.png" alt="CSS3"></li>
+      <li class="feature"><img id="featureimg" src="img/features/js5.png" alt="JS5"></li>
+      <li class="feature"><img id="featureimg" src="img/features/jq.png" alt="jQuery"></li>
+      <li class="feature"><img id="featureimg" src="img/features/bootstrap.png" alt="Bootstrap"></li>
+    </ul>
+    </div>
+  </div>
+
+
+
+
 </div>
 
 
