--- a/index.html
+++ b/index.html
@@ -18,66 +18,7 @@
 
 <body>
 
-<script>
-  /* Set the width of the side navigation to 250px and the left margin of the page content to 250px */
-  function openNav() {
-    document.getElementById("mySidenav").style.width = "250px";
-    document.getElementById("main").style.marginLeft = "250px";
-  }
-  /* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
-  function closeNav() {
-    document.getElementById("mySidenav").style.width = "0";
-    document.getElementById("main").style.marginLeft = "0";
-  }
-</script>
-
-<div onclick="openNav()">
-	<p id="nav-opener">&#9776;</p>
-</div>
-
-	<div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <div class="links">
-      <a href="index.html">Portfolio</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Get In Touch</a>
-      <a href="resume.html">Resume</a>
-      </div>
-    </div>
-
-<!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
-<div id="main">
-  
-  <header>
-    <div class="icon-container">
-      <img id="icon" src="img/icon.png" 
-      onmouseover="this.src='img/icon2.png'"
-      onmouseout="this.src='img/icon.png'" 
-      alt="Rob Hern">
-      </div>
-	  <div class="headings-container">
-		<h1 class="hundred" id="nameid"><a href="index.html">Rob Hern</a></h1>
-		<h2 class="written hundred" id="jobtitle">Junior Front End Web Developer</h2>
-		<ul class="social-buttons hundred">
-          <a href= "http://instagram.com/robhern"><li class="pe-so-instagram social-buttons"></li></a>
-          <a href="http://twitter.com/robhern"><li class="pe-so-twitter social-buttons"></li></a>
-          <a href="http://github.com/robhern135"><li class="pe-so-github social-buttons"></li></a>
-          <a href="https://www.linkedin.com/in/roberthern/"><li class="pe-so-linkedin social-buttons"></li></a>
-        </ul>
-		</div>
-	</header>
-	<div id="project-container">
-	  <!--<div class="project-box">
-		  <img src="img/jack1_small.jpg"
-		  onmouseover="this.src='img/jack2_small.jpg'"
-      onmouseout="this.src='img/jack1_small.jpg'" 
-		  alt ="Jack Mudge - 3D Artist Portfolio Site"/>
-		<h3>3D Artist Site</h3>
-		<h4 class="handwritten">Jack Mudge</h4>
-		<p><a href="">Learn More</a>  |  <a href="">View</a></p>
-	  </div>-->
-	</div>
-</div>
+<h1 id="comingsoon">COMING SOON</h1>
 
 
 </body>
