--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="fonts/ow/css/styles.min.css"/>
   <meta name="description" content="Rob Hern's Portfolio. Junior Front-End Web Developer in London, England">
   <meta property="og:title" content="Rob Hern. Junior Front-End Web Developer. London, England.">
-  <meta property="og:image" content="share.png">
+  <meta property="og:image" content="img/share.png">
   <meta property="site_name" content="Rob Hern | Junior Front End Web Developer">
   <meta name="twitter:site" content="@robhern">
 </head>
