adding about page

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 </div>
 
 <div id="portfolio" class="slide">
+<h1 class="slide-header black">Portfolio</h1>
   <div id="project-container">
     <div class="project-box"><!--      START PORTFOLIO PIECE    -->
       <div class="imgbox">
@@ -102,6 +103,7 @@
 </div><!--end of portfolio-->
 
 <div id="contact" class="slide">
+  <h1 class="slide-header">Contact</h1>
   <div id="email" class="contact-slide"><a href= "mailto:robertjhern@gmail.com"><li class="fa fa-envelope-o"></li>
   <p>RobertJHern@gmail.com</p></a></div>
   <div id="github" class="contact-slide"><a target="_blank" href= "http://github.com/robhern135"><li class="pe-so-github"></li><p>github.com/RobHern135</p></a></div>
@@ -110,6 +112,12 @@
 </div>
 
 <div id="about" class="slide">
+  <h1 class="slide-header black">About</h1>
+  <div id="top-container">
+  <div id="about-info-container">
+    <h3>Skills</h3>
+    <p>After having worked in Television for 3 years for companies such as ITV, BSkyB, BBC, and Netflix, I am currently retraining in Web Development. My time in TV allowed me to cultivate a strong work ethic, a level head under pressure, excellent prioritisation and time keeping skills, as well as a logical, methodical, careful approach to all work I undertake.</p><p>I am working full time to complete Udacity’s Front End Web Developer Nanodegree course in a timely yet thorough manner while working on personal projects to build up a strong portfolio.</p>
+  </div>
   <div id="skills-container">
     <h3 id="bar-trigger">Skills</h3>
     <div id="skills-box"><!-- start bar -->
@@ -151,6 +159,7 @@
         <p class="skill-identifier">Bootstrap</p>
         <div class="progress-bar progress skills-bar"></div>
       </div><!--end of skills-box-->
+    </div>
 
       
     </div>
