--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/responsivestyle.css"/>
   <link rel="stylesheet" href="fonts/pe-icon-social/css/pe-icon-social.css">
   <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
+  <link rel="icon" href="/favicon.png">
   <link rel="stylesheet" href="fonts/ow/css/styles.min.css"/>
   <meta name="description" content="Rob Hern's Portfolio. Junior Front-End Web Developer in London, England">
   <meta property="og:title" content="Rob Hern. Junior Front-End Web Developer. London, England.">
