--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
       </div>
     </div><!-- END OF INFO BOX-->
   </div><!--end of info-container-->
+  <footer>Site handmade by Rob Hern ©2017</footer>
 </div><!--end of #about-->
 
 </body>
