fixing mobile for about

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <h1 class="slide-header black">About</h1>
   <div id="top-container">
   <div id="about-info-container">
-    <h3>Skills</h3>
+    <h3>About Me</h3>
     <p>After having worked in Television for 3 years for companies such as ITV, BSkyB, BBC, and Netflix, I am currently retraining in Web Development. My time in TV allowed me to cultivate a strong work ethic, a level head under pressure, excellent prioritisation and time keeping skills, as well as a logical, methodical, careful approach to all work I undertake.</p><p>I am working full time to complete Udacity’s Front End Web Developer Nanodegree course in a timely yet thorough manner while working on personal projects to build up a strong portfolio.</p>
   </div>
   <div id="skills-container">
@@ -182,9 +182,9 @@
     <div class="info-box">
       <p class="info-description">Films Watched</p>
       <p class="info-icon"><i class="fa fa-film" aria-hidden="true"></i></p>
-      <p class="info-total">10</p>
+      <p class="info-total">11</p>
       <p class="info-goal">Goal: 40</p>
-      <div class="progress-wrap progress" data-progress-percent="25">
+      <div class="progress-wrap progress" data-progress-percent="27.5">
         <div class="progress-bar progress"></div>
       </div>
     </div>
@@ -200,11 +200,11 @@
     </div>
 
     <div class="info-box">
-      <p class="info-description">Websites Made</p>
+      <p class="info-description">Personal Projects</p>
       <p class="info-icon"><i class="fa fa-file-text" aria-hidden="true"></i></p>
-      <p class="info-total">7</p>
-      <p class="info-goal">Goal: 40</p>
-      <div class="progress-wrap progress" data-progress-percent="17.5">
+      <p class="info-total">2</p>
+      <p class="info-goal">Goal: 5</p>
+      <div class="progress-wrap progress" data-progress-percent="40">
         <div class="progress-bar progress"></div>
       </div>
     </div>
