updating skills etc

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
           <li>Modals</li>
           <li>Rollovers</li>
           <li>JSON</li>
+          <li>Handmade</li>
         </ul>
         </div><!--end of list-container-->
       </div><!--end of aboutbox-->
@@ -157,6 +158,12 @@
       <div id="skills-box"><!-- start bar -->
       <div class="progress-wrap progress skills-wrap" data-progress-percent="60">
         <p class="skill-identifier">Bootstrap</p>
+        <div class="progress-bar progress skills-bar"></div>
+      </div><!--end of skills-box-->
+
+      <div id="skills-box"><!-- start bar -->
+      <div class="progress-wrap progress skills-wrap" data-progress-percent="70">
+        <p class="skill-identifier">Wordpress</p>
         <div class="progress-bar progress skills-bar"></div>
       </div><!--end of skills-box-->
     </div>
@@ -241,9 +248,9 @@
     <div class="info-box">
       <p class="info-description">Drag Race Episodes Watched</p>
       <p class="info-icon"><i class="fa fa-female" aria-hidden="true"></i></p>
-      <p class="info-total">50</p>
+      <p class="info-total">55</p>
       <p class="info-goal">Goal: 96</p>
-      <div class="progress-wrap progress" data-progress-percent="63">
+      <div class="progress-wrap progress" data-progress-percent="68">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -251,9 +258,9 @@
     <div class="info-box">
       <p class="info-description">Overwatch Level Attained</p>
       <p class="info-icon"><i class="icons8-overwatch"></i></p>
-      <p class="info-total">218</p>
+      <p class="info-total">228</p>
       <p class="info-goal">Goal: 300</p>
-      <div class="progress-wrap progress" data-progress-percent="72">
+      <div class="progress-wrap progress" data-progress-percent="76">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
