remove about text

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
 <div id="about" class="slide">
   <h1 class="slide-header black">About</h1>
   <div id="top-container">
-  <div id="about-info-container">
+  <!--<div id="about-info-container">
     <h3>About Me</h3>
     <p>After having worked in Television for 3 years for companies such as ITV, BSkyB, BBC, and Netflix, I am currently retraining in Web Development. My time in TV allowed me to cultivate a strong work ethic, a level head under pressure, excellent prioritisation and time keeping skills, as well as a logical, methodical, careful approach to all work I undertake.</p><p>I am working full time to complete Udacity’s Front End Web Developer Nanodegree course in a timely yet thorough manner while working on personal projects to build up a strong portfolio.</p>
-  </div>
+  </div>-->
   <div id="skills-container">
     <h3 id="bar-trigger">Skills</h3>
     <div id="skills-box"><!-- start bar -->
