updating headers removed on small screens

--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
         </div><!--end of gallery-->
       </div><!--end of imgbox-->
       <div class="aboutbox">
-        <h3 class="poppins"><a target="_blank" href="http://jackmudge.co.uk">Artist Portfolio Site</a></h3>
+        <h3 class="poppins"><a target="_blank" href="http://jackmudge.co.uk">Artist Portfolio</a></h3>
         <h4 class="poppins"><a target="_blank" href="https://www.linkedin.com/in/jackmudge">Jack Mudge</a></h4>
         <p class="portfolio-desc">A fully responsive Artist's Portfolio website utilising Bootstrap and jQuery to show off skills and finished pieces.</p>
+        <h4 class="poppins"><a href="https://github.com/robhern135/Jack-Mudge">Github Repo</a></h4>
         <div class="list-container">
         <ul class="skills-list">
           <li>HTML5</li>
@@ -95,7 +96,48 @@
         </ul>
         </div><!--end of list-container-->
       </div><!--end of aboutbox-->
-      </div><!-- end of project-box -->
+    </div><!-- end of project-box -->
+
+
+
+    <div class="project-box"><!--START PORTFOLIO PIECE    -->
+      <div class="imgbox">
+        <div class="ism-slider" data-play_type="loop" data-radio_type="thumbnail" id="my-slider2">
+        <ol>
+          <li>
+            <img src="img/angiesite/desktop.png" alt="Desktop View">
+          </li>
+          <li>
+            <img src="img/angiesite/mobile.png" alt="Mobile View">
+          </li>
+          <li>
+            <img src="img/angiesite/tablet.png" alt="Tablet View">
+          </li>
+        </ol>
+        </div><!--end of gallery-->
+      </div><!--end of imgbox-->
+      <div class="aboutbox">
+        <h3 class="poppins"><a target="_blank" href="http://robhern135@github.io/angiemudge" class="smaller"> Make-Up Artist Portfolio</a></h3>
+        <h4 class="poppins"><a target="_blank" href="https://www.linkedin.com/in/angie-mudge-64b7aa77/">Angie Mudge</a></h4>
+        <p class="portfolio-desc">Hand-remaking of an existing portfolio site to make it fully responsive & accessible, including tables populated upon page load via JSON objects.</p>
+        <h4 class="poppins"><a href="https://github.com/robhern135/angiemudge">Github Repo</a></h4>
+        <div class="list-container">
+        <ul class="skills-list">
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>Javascript 5</li>
+          <li>jQuery</li>
+          <li>Responsive Design</li>
+          <li>Rollovers</li>
+          <li>JSON</li>
+          <li>Handmade</li>
+          <li><a href="http://johnpolacek.github.io/stacktable.js/">Plugin: Stackable.js</a></li>
+        </ul>
+        </div><!--end of list-container-->
+      </div><!--end of aboutbox-->
+    </div><!-- end of project-box -->
+
+
   </div><!--end of project-container-->
     <p id="moresoon">More Coming Soon</p>
   <hr><!--  END OF INDIVIDUAL PORTFOLIO PIECE  -->
@@ -224,9 +266,9 @@
     <div class="info-box">
       <p class="info-description">Live Events</p>
       <p class="info-icon"><i class="fa fa-ticket" aria-hidden="true"></i></p>
-      <p class="info-total">3</p>
+      <p class="info-total">5</p>
       <p class="info-goal">Goal: 15</p>
-      <div class="progress-wrap progress" data-progress-percent="20">
+      <div class="progress-wrap progress" data-progress-percent="33.33">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -254,9 +296,9 @@
     <div class="info-box">
       <p class="info-description">Overwatch Level Attained</p>
       <p class="info-icon"><i class="icons8-overwatch"></i></p>
-      <p class="info-total">228</p>
-      <p class="info-goal">Goal: 300</p>
-      <div class="progress-wrap progress" data-progress-percent="76">
+      <p class="info-total">319</p>
+      <p class="info-goal">Goal: 400</p>
+      <div class="progress-wrap progress" data-progress-percent="79">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
