--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <link rel="stylesheet" href="css/gallerystyle.css"/>
   <link rel="stylesheet" href="fonts/pe-icon-social/css/pe-icon-social.css">
   <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
-  <link rel="icon" href="/favicon.png">
+  <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="fonts/ow/css/styles.min.css"/>
   <meta name="description" content="Rob Hern's Portfolio. Junior Front-End Web Developer in London, England">
   <meta property="og:title" content="Rob Hern. Junior Front-End Web Developer. London, England.">
-  <meta property="og:image" content="img/share.png">
+  <meta property="og:image" content="img/favicon.png">
   <meta property="site_name" content="Rob Hern | Junior Front End Web Developer">
   <meta name="twitter:site" content="@robhern">
 </head>
@@ -302,6 +302,37 @@
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
+
+        <div class="info-box">
+      <p class="info-description">Books Read</p>
+      <p class="info-icon"><i class="fa fa-book" aria-hidden="true"></i></p>
+      <p class="info-total">0</p>
+      <p class="info-goal">Goal: 6</p>
+      <div class="progress-wrap progress" data-progress-percent="0">
+        <div class="progress-bar progress"></div>
+      </div>
+    </div><!-- END OF INFO BOX-->
+
+        <div class="info-box">
+      <p class="info-description">Road Trips Taken</p>
+      <p class="info-icon"><i class="fa fa-car" aria-hidden="true"></i></p>
+      <p class="info-total">0</p>
+      <p class="info-goal">Goal: 3</p>
+      <div class="progress-wrap progress" data-progress-percent="0">
+        <div class="progress-bar progress"></div>
+      </div>
+    </div><!-- END OF INFO BOX-->
+
+        <div class="info-box">
+      <p class="info-description">Netflix Originals Binged</p>
+      <p class="info-icon"><i class="fa fa-television" aria-hidden="true"></i></p>
+      <p class="info-total">5</p>
+      <p class="info-goal">Goal: 1</p>
+      <div class="progress-wrap progress" data-progress-percent="20">
+        <div class="progress-bar progress"></div>
+      </div>
+    </div><!-- END OF INFO BOX-->
+
   </div><!--end of info-container-->
   <footer>Site handmade by Rob Hern ©2017</footer>
 </div><!--end of #about-->
