upating personal stats

--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@
     </div>
 
     <div class="info-box">
-      <p class="info-description">Personal Projects</p>
-      <p class="info-icon"><i class="fa fa-file-text" aria-hidden="true"></i></p>
-      <p class="info-total">2</p>
-      <p class="info-goal">Goal: 5</p>
-      <div class="progress-wrap progress" data-progress-percent="40">
+      <p class="info-description">Holidays Taken</p>
+      <p class="info-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></p>
+      <p class="info-total">0</p>
+      <p class="info-goal">Goal: 2</p>
+      <div class="progress-wrap progress" data-progress-percent="0">
         <div class="progress-bar progress"></div>
       </div>
     </div>
