adding Lostboy site

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div><!--end of gallery-->
       </div><!--end of imgbox-->
       <div class="aboutbox">
-        <h3 class="poppins"><a target="_blank" href="http://robhern135@github.io/angiemudge" class="smaller"> Make-Up Artist Portfolio</a></h3>
+        <h3 class="poppins"><a target="_blank" href="http://robhern135.github.io/angiemudge" class="smaller"> Make-Up Artist Portfolio</a></h3>
         <h4 class="poppins"><a target="_blank" href="https://www.linkedin.com/in/angie-mudge-64b7aa77/">Angie Mudge</a></h4>
         <p class="portfolio-desc">Hand-remaking of an existing portfolio site to make it fully responsive & accessible, including tables populated upon page load via JSON objects.</p>
         <h4 class="poppins"><a href="https://github.com/robhern135/angiemudge">Github Repo</a></h4>
@@ -128,7 +128,43 @@
           <li>Rollovers</li>
           <li>JSON</li>
           <li>Handmade</li>
-          <li><a href="http://johnpolacek.github.io/stacktable.js/">Plugin: Stackable.js</a></li>
+          <li><a href="http://johnpolacek.github.io/stacktable.js/">Plugin: Stacktable.js</a></li>
+        </ul>
+        </div><!--end of list-container-->
+      </div><!--end of aboutbox-->
+    </div><!-- end of project-box -->
+
+    <div class="project-box"><!--START PORTFOLIO PIECE    -->
+      <div class="imgbox">
+        <div class="ism-slider" data-play_type="loop" data-radio_type="thumbnail" id="my-slider3">
+        <ol>
+          <li>
+            <img src="img/lostboysite/desktop.png" alt="Desktop View">
+          </li>
+          <li>
+            <img src="img/lostboysite/mobile.png" alt="Mobile View">
+          </li>
+          <li>
+            <img src="img/lostboysite/tablet.png" alt="Tablet View">
+          </li>
+        </ol>
+        </div><!--end of gallery-->
+      </div><!--end of imgbox-->
+      <div class="aboutbox">
+        <h3 class="poppins"><a target="_blank" href="http://robhern135.github.io/Lostboy" class="smaller">Indie Folk Band</a></h3>
+        <h4 class="poppins"><a target="_blank" href="https://twitter.com/lostboyduo">Lostboy</a></h4>
+        <p class="portfolio-desc">A sleek, easy to use, fully responsive website for an independent folk band showcasing videos and tour dates.</p>
+        <h4 class="poppins"><a href="https://github.com/robhern135/Lostboy">Github Repo</a></h4>
+        <div class="list-container">
+        <ul class="skills-list">
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>Javascript 5</li>
+          <li>jQuery</li>
+          <li>Responsive Design</li>
+          <li>JSON</li>
+          <li>Handmade</li>
+          <li><a href="https://news.bandsintown.com/home">Widget: BandsInTown</a></li>
         </ul>
         </div><!--end of list-container-->
       </div><!--end of aboutbox-->
