updating stats and skills

--- a/index.html
+++ b/index.html
@@ -236,6 +236,12 @@
         <div class="progress-bar progress skills-bar"></div>
       </div><!--end of skills-box-->
 
+      <div id="skills-box"><!-- start bar -->
+      <div class="progress-wrap progress skills-wrap" data-progress-percent="50">
+        <p class="skill-identifier">PHP</p>
+        <div class="progress-bar progress skills-bar"></div>
+      </div><!--end of skills-box-->
+
 
     </div>
 
@@ -249,9 +255,9 @@
     <div class="info-box">
       <p class="info-description">Bullseyes Hit</p>
       <p class="info-icon"><i class="fa fa-bullseye" aria-hidden="true"></i></p>
-      <p class="info-total">5</p>
+      <p class="info-total">12</p>
       <p class="info-goal">Goal: 25</p>
-      <div class="progress-wrap progress" data-progress-percent="20">
+      <div class="progress-wrap progress" data-progress-percent="48">
         <div class="progress-bar progress"></div>
       </div>
     </div>
@@ -259,9 +265,9 @@
     <div class="info-box">
       <p class="info-description">Films Watched</p>
       <p class="info-icon"><i class="fa fa-film" aria-hidden="true"></i></p>
-      <p class="info-total">11</p>
+      <p class="info-total">27</p>
       <p class="info-goal">Goal: 40</p>
-      <div class="progress-wrap progress" data-progress-percent="27.5">
+      <div class="progress-wrap progress" data-progress-percent="67.5">
         <div class="progress-bar progress"></div>
       </div>
     </div>
@@ -269,9 +275,9 @@
     <div class="info-box">
       <p class="info-description">New Dishes Cooked</p>
       <p class="info-icon"><i class="fa fa-cutlery" aria-hidden="true"></i></p>
-      <p class="info-total">5</p>
+      <p class="info-total">15</p>
       <p class="info-goal">Goal: 25</p>
-      <div class="progress-wrap progress" data-progress-percent="20">
+      <div class="progress-wrap progress" data-progress-percent="75">
         <div class="progress-bar progress"></div>
       </div>
     </div>
@@ -279,9 +285,9 @@
     <div class="info-box">
       <p class="info-description">Holidays Taken</p>
       <p class="info-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></p>
-      <p class="info-total">0</p>
+      <p class="info-total">1</p>
       <p class="info-goal">Goal: 2</p>
-      <div class="progress-wrap progress" data-progress-percent="0">
+      <div class="progress-wrap progress" data-progress-percent="50">
         <div class="progress-bar progress"></div>
       </div>
     </div>
@@ -299,9 +305,9 @@
     <div class="info-box">
       <p class="info-description">Live Events</p>
       <p class="info-icon"><i class="fa fa-ticket" aria-hidden="true"></i></p>
-      <p class="info-total">5</p>
+      <p class="info-total">10</p>
       <p class="info-goal">Goal: 15</p>
-      <div class="progress-wrap progress" data-progress-percent="33.33">
+      <div class="progress-wrap progress" data-progress-percent="66.66">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -319,9 +325,9 @@
     <div class="info-box">
       <p class="info-description">Drag Race Episodes Watched</p>
       <p class="info-icon"><i class="fa fa-female" aria-hidden="true"></i></p>
-      <p class="info-total">80</p>
+      <p class="info-total">96</p>
       <p class="info-goal">Goal: 96</p>
-      <div class="progress-wrap progress" data-progress-percent="83">
+      <div class="progress-wrap progress" data-progress-percent="100">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -329,9 +335,9 @@
     <div class="info-box">
       <p class="info-description">Overwatch Level Attained</p>
       <p class="info-icon"><i class="icons8-overwatch"></i></p>
-      <p class="info-total">319</p>
-      <p class="info-goal">Goal: 400</p>
-      <div class="progress-wrap progress" data-progress-percent="79">
+      <p class="info-total">465</p>
+      <p class="info-goal">Goal: 500</p>
+      <div class="progress-wrap progress" data-progress-percent="93">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -339,9 +345,9 @@
         <div class="info-box">
       <p class="info-description">Books Read</p>
       <p class="info-icon"><i class="fa fa-book" aria-hidden="true"></i></p>
-      <p class="info-total">2</p>
+      <p class="info-total">3</p>
       <p class="info-goal">Goal: 6</p>
-      <div class="progress-wrap progress" data-progress-percent="33.33">
+      <div class="progress-wrap progress" data-progress-percent="50">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -349,9 +355,9 @@
         <div class="info-box">
       <p class="info-description">Road Trips Taken</p>
       <p class="info-icon"><i class="fa fa-car" aria-hidden="true"></i></p>
-      <p class="info-total">0</p>
+      <p class="info-total">1</p>
       <p class="info-goal">Goal: 3</p>
-      <div class="progress-wrap progress" data-progress-percent="0">
+      <div class="progress-wrap progress" data-progress-percent="33.33">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -359,9 +365,9 @@
         <div class="info-box">
       <p class="info-description">Netflix Originals Binged</p>
       <p class="info-icon"><i class="fa fa-television" aria-hidden="true"></i></p>
-      <p class="info-total">5</p>
-      <p class="info-goal">Goal: 1</p>
-      <div class="progress-wrap progress" data-progress-percent="20">
+      <p class="info-total">2</p>
+      <p class="info-goal">Goal: 5</p>
+      <div class="progress-wrap progress" data-progress-percent="40">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
