adding job title

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <h1 class="highlight-text">Rob Hern</h1>
         <h2 id="jobtitle">Junior Front End Web Developer</h2>
         <p>I am a Junior Front End Web Developer based in Essex & London. I enjoy building sites with responsive design and sleek user experiences with a focus on the site's content.</p>
+        <p>I am currently working as a Junior Front End Web Developer at <a href="https://www.media-ten.com/" class="highlight-text" target="_blank">Media 10 Ltd</a>.</p>
         <p>Please check out my <a href="#portfolio" class="highlight-text">Portfolio</a>, and feel free to <a class="highlight-text" href="#contact">get in touch</a> if you like what you see!</p>
       </div>
 </div>
