minifying code and compressing images

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="css/style.css"/>
-  <link rel="stylesheet" href="css/responsivestyle.css"/>
-  <link rel="stylesheet" href="css/gallerystyle.css"/>
+  <link rel="stylesheet" href="css/min/responsivestyle.min.css"/>
+  <link rel="stylesheet" href="css/min/gallerystyle.min.css"/>
   <link rel="stylesheet" href="fonts/pe-icon-social/css/pe-icon-social.css">
   <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
   <link rel="icon" href="favicon.png">
@@ -219,7 +219,7 @@
     </div><!--end of skills-box-->
 
     <div id="skills-box"><!-- start bar -->
-      <div class="progress-wrap progress skills-wrap" data-progress-percent="70">
+      <div class="progress-wrap progress skills-wrap" data-progress-percent="80">
         <p class="skill-identifier">jQuery</p>
         <div class="progress-bar progress skills-bar"></div>
       </div>
@@ -232,13 +232,13 @@
       </div><!--end of skills-box-->
 
       <div id="skills-box"><!-- start bar -->
-      <div class="progress-wrap progress skills-wrap" data-progress-percent="60">
+      <div class="progress-wrap progress skills-wrap" data-progress-percent="70">
         <p class="skill-identifier">Bootstrap</p>
         <div class="progress-bar progress skills-bar"></div>
       </div><!--end of skills-box-->
 
       <div id="skills-box"><!-- start bar -->
-      <div class="progress-wrap progress skills-wrap" data-progress-percent="50">
+      <div class="progress-wrap progress skills-wrap" data-progress-percent="60">
         <p class="skill-identifier">PHP</p>
         <div class="progress-bar progress skills-bar"></div>
       </div><!--end of skills-box-->
@@ -256,9 +256,9 @@
     <div class="info-box">
       <p class="info-description">Bullseyes Hit</p>
       <p class="info-icon"><i class="fa fa-bullseye" aria-hidden="true"></i></p>
-      <p class="info-total">12</p>
+      <p class="info-total">21</p>
       <p class="info-goal">Goal: 25</p>
-      <div class="progress-wrap progress" data-progress-percent="48">
+      <div class="progress-wrap progress" data-progress-percent="84">
         <div class="progress-bar progress"></div>
       </div>
     </div>
@@ -266,9 +266,9 @@
     <div class="info-box">
       <p class="info-description">Films Watched</p>
       <p class="info-icon"><i class="fa fa-film" aria-hidden="true"></i></p>
-      <p class="info-total">27</p>
+      <p class="info-total">35</p>
       <p class="info-goal">Goal: 40</p>
-      <div class="progress-wrap progress" data-progress-percent="67.5">
+      <div class="progress-wrap progress" data-progress-percent="87.5">
         <div class="progress-bar progress"></div>
       </div>
     </div>
@@ -276,9 +276,9 @@
     <div class="info-box">
       <p class="info-description">New Dishes Cooked</p>
       <p class="info-icon"><i class="fa fa-cutlery" aria-hidden="true"></i></p>
-      <p class="info-total">15</p>
-      <p class="info-goal">Goal: 25</p>
-      <div class="progress-wrap progress" data-progress-percent="75">
+      <p class="info-total">10</p>
+      <p class="info-goal">Goal: 10</p>
+      <div class="progress-wrap progress" data-progress-percent="100">
         <div class="progress-bar progress"></div>
       </div>
     </div>
@@ -286,9 +286,9 @@
     <div class="info-box">
       <p class="info-description">Holidays Taken</p>
       <p class="info-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></p>
-      <p class="info-total">1</p>
+      <p class="info-total">2</p>
       <p class="info-goal">Goal: 2</p>
-      <div class="progress-wrap progress" data-progress-percent="50">
+      <div class="progress-wrap progress" data-progress-percent="100">
         <div class="progress-bar progress"></div>
       </div>
     </div>
@@ -296,9 +296,9 @@
     <div class="info-box">
       <p class="info-description">New Cities Visited</p>
       <p class="info-icon"><i class="fa fa-map-o" aria-hidden="true"></i></p>
-      <p class="info-total">0</p>
+      <p class="info-total">2</p>
       <p class="info-goal">Goal: 2</p>
-      <div class="progress-wrap progress" data-progress-percent="0">
+      <div class="progress-wrap progress" data-progress-percent="100">
         <div class="progress-bar progress"></div>
       </div>
     </div>
@@ -306,9 +306,9 @@
     <div class="info-box">
       <p class="info-description">Live Events</p>
       <p class="info-icon"><i class="fa fa-ticket" aria-hidden="true"></i></p>
-      <p class="info-total">10</p>
+      <p class="info-total">13</p>
       <p class="info-goal">Goal: 15</p>
-      <div class="progress-wrap progress" data-progress-percent="66.66">
+      <div class="progress-wrap progress" data-progress-percent="86.66">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -316,9 +316,9 @@
     <div class="info-box">
       <p class="info-description">Languages Learned</p>
       <p class="info-icon"><i class="fa fa-file-code-o" aria-hidden="true"></i></p>
-      <p class="info-total">4</p>
+      <p class="info-total">5</p>
       <p class="info-goal">Goal: 5</p>
-      <div class="progress-wrap progress" data-progress-percent="80">
+      <div class="progress-wrap progress" data-progress-percent="100">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -326,7 +326,7 @@
     <div class="info-box">
       <p class="info-description">Drag Race Episodes Watched</p>
       <p class="info-icon"><i class="fa fa-female" aria-hidden="true"></i></p>
-      <p class="info-total">96</p>
+      <p class="info-total">96+</p>
       <p class="info-goal">Goal: 96</p>
       <div class="progress-wrap progress" data-progress-percent="100">
         <div class="progress-bar progress"></div>
@@ -336,9 +336,9 @@
     <div class="info-box">
       <p class="info-description">Overwatch Level Attained</p>
       <p class="info-icon"><i class="icons8-overwatch"></i></p>
-      <p class="info-total">465</p>
+      <p class="info-total">490</p>
       <p class="info-goal">Goal: 500</p>
-      <div class="progress-wrap progress" data-progress-percent="93">
+      <div class="progress-wrap progress" data-progress-percent="98">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -346,7 +346,7 @@
         <div class="info-box">
       <p class="info-description">Books Read</p>
       <p class="info-icon"><i class="fa fa-book" aria-hidden="true"></i></p>
-      <p class="info-total">3</p>
+      <p class="info-total">5</p>
       <p class="info-goal">Goal: 6</p>
       <div class="progress-wrap progress" data-progress-percent="50">
         <div class="progress-bar progress"></div>
@@ -358,7 +358,7 @@
       <p class="info-icon"><i class="fa fa-car" aria-hidden="true"></i></p>
       <p class="info-total">1</p>
       <p class="info-goal">Goal: 3</p>
-      <div class="progress-wrap progress" data-progress-percent="33.33">
+      <div class="progress-wrap progress" data-progress-percent="83.33">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
@@ -366,9 +366,9 @@
         <div class="info-box">
       <p class="info-description">Netflix Originals Binged</p>
       <p class="info-icon"><i class="fa fa-television" aria-hidden="true"></i></p>
-      <p class="info-total">2</p>
+      <p class="info-total">4</p>
       <p class="info-goal">Goal: 5</p>
-      <div class="progress-wrap progress" data-progress-percent="40">
+      <div class="progress-wrap progress" data-progress-percent="80">
         <div class="progress-bar progress"></div>
       </div>
     </div><!-- END OF INFO BOX-->
