--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 </div><!--end of #about-->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/min/script.min.js"></script>
 <script type="text/javascript" src="js/gallery.js"></script>
 <script src="http://imakewebthings.github.com/jquery-waypoints/waypoints.min.js" type="text/javascript"></script>
 </body>
