--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="css/style.css"/>
-  <link rel="stylesheet" href="css/min/responsivestyle.min.css"/>
+  <link rel="stylesheet" href="css/responsivestyle.css"/>
   <link rel="stylesheet" href="css/min/gallerystyle.min.css"/>
   <link rel="stylesheet" href="fonts/pe-icon-social/css/pe-icon-social.css">
   <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
